--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,12 @@ jobs:
         HOSTLOC_PASSWORD: ${{ secrets.HOSTLOC_PASSWORD }}
       run: |
         ls -a
-        git clone https://github.com/ruleihui/goindex-theme-acrou.git
         git remote -v
         git checkout master
-        
+        git remote -add upstream https://github.com/Aicirou/goindex-theme-acrou.git
+        git remote -v
+        git fetch upstream
+        git checkout master
+        git merge upstream/master
+        git push origin master
       
