--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         git checkout master
         git remote add upstream https://github.com/Aicirou/goindex-theme-acrou.git
         git remote -v
-        git fetch upstream
+        git fetch upstream/master
         git checkout master
         git merge upstream/master
         git push origin master
