--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,14 @@ jobs:
       uses: actions/checkout@v2
     - name: 'updateUpstream'
       env:
-        HOSTLOC_USERNAME: ${{ secrets.HOSTLOC_USERNAME }}
-        HOSTLOC_PASSWORD: ${{ secrets.HOSTLOC_PASSWORD }}
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       run: |
         ls -a
         git clone https://github.com/ruleihui/goindex-theme-acrou.git
         cd goindex-theme-acrou/
         git config --global user.email "879903786@qq.com"
         git config --global user.name "ruleihui"
+        git config --global user.password $API_TOKEN_GITHUB
         git remote -v
         git checkout master
         git remote add upstream https://github.com/Aicirou/goindex-theme-acrou.git
